tools/minikube/templates/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: postgres
            - name: DB_DATABASE
              value: keycloak
            - name: DB_PASSWORD
              value: password
            - name: DB_USER
              value: keycloak
            - name: DB_VENDOR
              value: postgres
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: KEYCLOAK_USER
              value: admin
          args: ['-Dkeycloak.frontendUrl=https://keycloak.k8s.local/auth']
          image: quay.io/keycloak/keycloak:15.0.2
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
