tools/minikube/templates/postgres-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-catalog
  name: postgres-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-catalog
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: postgres-catalog
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: catalog
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: catalog
          image: postgres:13-alpine
          name: postgres-catalog
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: catalogpg-data
      restartPolicy: Always
      volumes:
        - name: catalogpg-data
          persistentVolumeClaim:
            claimName: catalogpg-data
status: {}
