tools/minikube/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: keycloak
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: keycloak
            - name: PINAKES_DATABASE_NAME
              value: dev_catalog
          image: postgres:13-alpine
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: createdb
            - mountPath: /var/lib/postgresql/data
              name: pg-data
      restartPolicy: Always
      volumes:
        - name: pg-data
          persistentVolumeClaim:
            claimName: pg-data
        - name: createdb
          configMap:
            name: dbscripts
            items:
              - key: "create_db.sh"
                path: "create_db.sh"
                mode: 0777
status: {}
