tools/minikube/templates/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: scheduler
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: scheduler
    spec:
      containers:
        - args:
            - "/home/appuser/catalog/tools/minikube/scripts/scheduler.sh"
          image: localhost/ansible-catalog
          imagePullPolicy: Never
          name: scheduler
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: scheduler-claim0
      restartPolicy: Always
      volumes:
        - name: scheduler-claim0
          persistentVolumeClaim:
            claimName: scheduler-claim0
status: {}
