tools/minikube/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
spec:
  tls:
    - hosts:
        - "keycloak.k8s.local"
  rules:
    - host: "keycloak.k8s.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
    - hosts:
        - "catalog.k8s.local"
  rules:
    - host: "catalog.k8s.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 443
